# recipeAI

./: .gitignore  LICENSE  README.md  chef.py  design.md  llm_config.py  main.py  mcp_server.py  models.py  nutrition.py  nutrition_mcp_client.py  planner.py  pyproject.toml  requirements.txt  setup_database.py
data/: complete_nutrition_database.json  nutrition.json
database/: __init__.py  converters.py  llm_nutrition.py  nutrition_db.py
nutrition_mcp/: mcp_client.py  mcp_server.py  nutrition_mcp_client.py  sync_mcp_client.py
src/: agent_utils.py  chef.py  ingredient_planner.py  mcp_tools.py  nutrition.py  planner.py
tests/: test_integration.py  test_mcp.py  test_nutrition_system.py
utils/: __init__.py  fuzzy_match.py
